updated select_work_type_modal to fix spacing and display types in a custom order

--- a/app/assets/stylesheets/osu.scss
+++ b/app/assets/stylesheets/osu.scss
@@ -261,3 +261,7 @@ input.fill_column {
   padding-top: 3em;
 }
 
+.match-my-cols .select-worktype:first-child {
+  border-top: 1px solid #ddd;
+}
+
